--- a/configs/datasets.yaml
+++ b/configs/datasets.yaml
@@ -1,51 +1,38 @@
-"Run3Summer22NanoAODv11-126X":
-    "names":
+"2022":
+  "mc":
+    "Run3Summer22NanoAODv11-126X":
+      "samples":
         - /DYto2L-2Jets_MLL-50_TuneCP5_13p6TeV_amcatnloFXFX-pythia8/Run3Summer22NanoAODv11-126X_mcRun3_2022_realistic_v2-v1/NANOAODSIM
         - /WtoLNu-2Jets_TuneCP5_13p6TeV_amcatnloFXFX-pythia8/Run3Summer22NanoAODv11-126X_mcRun3_2022_realistic_v2-v1/NANOAODSIM
-    "gjson":
-        dummy
-    "type":
-        mc
-
-"2022C":
-    "names":
-        - /Muon/Run2022C-PromptNanoAODv10_v1-v1/NANOAOD
-        - /SingleMuon/Run2022C-PromptNanoAODv10_v1-v1/NANOAOD
-    "gjson":
+     
+  "data":
+    "2022B":
+      "samples":
+        - /SingleMuon/Run2022B-22Sep2023-v1/NANOAOD
+      "gjson":
+        configs/jsons/Cert_Collisions2022_eraB_355100_355769_Golden.json
+    "2022C":
+      "samples":
+        - /Muon/Run2022C-22Sep2023-v1/NANOAOD
+      "gjson":
         configs/jsons/Cert_Collisions2022_eraC_355862_357482_Golden.json
-    "type":
-        data
-
-"2022D":
-    "names":
-        - /Muon/Run2022D-PromptNanoAODv10_v2-v1/NANOAOD
-    "gjson":
+    "2022D":
+      "samples":
+        - /Muon/Run2022D-22Sep2023-v1/NANOAOD
+      "gjson":
         configs/jsons/Cert_Collisions2022_eraD_357538_357900_Golden.json
-    "type":
-        data
-        
-"2022E":
-    "names":
-        - /Muon/Run2022E-PromptNanoAODv10_v1-v3/NANOAOD
-    "gjson":
+    "2022E":
+      "samples":
+        - /Muon/Run2022E-22Sep2023-v1/NANOAOD
+      "gjson":
         configs/jsons/Cert_Collisions2022_eraE_359022_360331_Golden.json
-    "type":
-        data
-        
-"2022F":
-    "names":
+    "2022F":
+      "samples":
         - /Muon/Run2022F-PromptNanoAODv10_v1-v2/NANOAOD
-    "gjson":
+      "gjson":
         configs/jsons/Cert_Collisions2022_eraF_360390_362167_Golden.json
-    "type":
-        data
-        
-"2022G":
-    "names":
+    "2022G":
+      "samples":
         - /Muon/Run2022G-PromptNanoAODv11_v1-v2/NANOAOD
-    "gjson":
+      "gjson":
         configs/jsons/Cert_Collisions2022_eraG_362433_362760_Golden.json
-    "type":
-        data
-        
-
